--- a/data/cards/10938846.yaml
+++ b/data/cards/10938846.yaml
@@ -2,11 +2,11 @@ konami_id: 17735
 password: 10938846
 name:
   en: Rainbow Bridge of the Heart
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Regenbogenbrücke des Herzens
+  es: Puente de Arco Iris del Corazón
+  fr: Pont Arc-en-Ciel du Cœur
+  it: Ponte Arcobaleno del Cuore
+  pt: Ponte Arco-Íris do Coração
   ja: <ruby>心<rt>こころ</rt></ruby>の<ruby>架<rt>か</rt></ruby>け<ruby>橋<rt>はし</rt></ruby>
   ja_romaji: Kokoro no Kakehashi
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     During your Main Phase, you can Normal Summon 1 "Crystal Beast" monster, in addition to your Normal Summon/Set. (You can only gain this effect once per turn.) You can only use each of the following effects of "Rainbow Bridge of the Heart" once per turn. During your Main Phase: You can destroy 1 "Crystal Beast" card you control or in your hand, and if you do, add 1 "Crystal" Spell/Trap from your Deck to your hand. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone, even during the Damage Step: You can target 1 card your opponent controls; return both that card and this card to the hand.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Während deiner Main Phase kannst du zusätzlich zu deiner Normalbeschwörung / deinem Setzen 1 „Kristallungeheuer“-Monster als Normalbeschwörung beschwören. (Du kannst diesen Effekt nur einmal pro Spielzug erhalten.) Du kannst jeden der folgenden Effekte von „Regenbogenbrücke des Herzens“ nur einmal pro Spielzug verwenden. Während deiner Main Phase: Du kannst 1 „Kristallungeheuer“-Karte zerstören, die du kontrollierst oder die sich in deiner Hand befindet, und falls du dies tust, füge deiner Hand 1 „Kristall“-Zauber/Falle von deinem Deck hinzu. Falls eine oder mehr „Kristallungeheuer“-Karten in deine Zauber- & Fallenzone gelegt werden, selbst während des Damage Steps: Du kannst 1 Karte wählen, die dein Gegner kontrolliert; gib sowohl jene Karte als auch diese Karte auf die Hand zurück.
+  es: |-
+    Durante tu Main Phase, puedes Invocar de Modo Normal 1 monstruo "Bestia de Cristal", además de tu Invocación Normal/Colocación. (Sólo puedes ganar este efecto una vez por turno). Sólo puedes usar cada uno de los siguientes efectos de "Puente de Arco Iris del Corazón" una vez por turno. Durante tu Main Phase: puedes destruir 1 carta "Bestia de Cristal" que controles o en tu mano y, si lo haces, añade a tu mano 1 Mágica/Trampa "Cristal" en tu Deck. Si una o más cartas "Bestia de Cristal" son puestas en tu Zona de Magia y Trampas, incluso durante el Damage Step: puedes seleccionar 1 carta que controle tu adversario; devuelve tanto esa carta como esta carta a la mano.
+  fr: |-
+    Durant votre Main Phase, vous pouvez Invoquer Normalement 1 monstre "Bête Cristalline" en plus de votre Invocation/Pose Normale. (Vous ne pouvez gagner cet effet qu'une fois par tour.) Vous ne pouvez utiliser chacun des effets suivants de "Pont Arc-en-Ciel du Cœur" qu'une fois par tour. Durant votre Main Phase : vous pouvez détruire 1 carte "Bête Cristalline" que vous contrôlez ou dans votre main, et si vous le faites, ajoutez 1 Magie/Piège "Cristal" depuis votre Deck à votre main. Si une ou plusieurs cartes "Bête Cristalline" sont placées dans votre Zone Magie & Piège, même durant la Damage Step : vous pouvez cibler 1 carte contrôlée par votre adversaire ; renvoyez la carte ainsi que cette carte à la main.
+  it: |-
+    Durante la tua Main Phase, puoi Evocare Normalmente 1 mostro "Bestia Cristallo", in aggiunta alla tua Evocazione Normale/Posizionamento. (Puoi guadagnare questo effetto una sola volta per turno.) Puoi utilizzare ognuno dei seguenti effetti di "Ponte Arcobaleno del Cuore" una sola volta per turno. Durante la tua Main Phase: puoi distruggere 1 carta "Bestia Cristallo" che controlli o nella tua mano e, se lo fai, aggiungi 1 Magia/Trappola "Cristallo" dal tuo Deck alla tua mano. Se una o più carte "Bestia Cristallo" vengono messe nella tua Zona Magie & Trappole, anche durante il Damage Step: puoi scegliere come bersaglio 1 carta controllata dal tuo avversario; fai ritornare sia quella carta che questa carta nella mano.
+  pt: |-
+    Durante sua Fase Principal, você pode Invocar por Invocação-Normal 1 monstro "Fera Cristalina", em adição à sua Invocação-Normal/Baixar (padrão). (Você só pode se aproveitar deste efeito uma vez por turno.) Você só pode usar cada um dos seguintes efeitos de "Ponte Arco-Íris do Coração" uma vez por turno. Durante sua Fase Principal: você pode destruir 1 card "Fera Cristalina" que você controla ou na sua mão e, se isso acontecer, adicione 1 Magia/Armadilha "Cristalino(a)" do seu Deck à sua mão. Se um ou mais cards "Fera Cristalina" forem colocados na sua Zona de Magias & Armadilhas, mesmo durante a Etapa de Dano: você pode escolher 1 card que seu oponente controla; devolva tanto esse card quanto este card para a mão.
   ja: |-
     このカード名の②③の効果はそれぞれ１ターンに１度しか使用できない。①：自分は通常召喚に加えて１度だけ、自分メインフェイズに「宝玉獣」モンスター１体を召喚できる。②：自分メインフェイズに発動できる。自分の手札・フィールドの「宝玉獣」カード１枚を選んで破壊し、デッキから「宝玉」魔法・罠カード１枚を手札に加える。③：自分の魔法＆罠ゾーンに「宝玉獣」カードが置かれた場合、相手フィールドのカード１枚を対象として発動できる（ダメージステップでも発動可能）。そのカードとこのカードを持ち主の手札に戻す。
   ko:
