--- a/data/cards/11155484.yaml
+++ b/data/cards/11155484.yaml
@@ -2,11 +2,11 @@ konami_id: 17732
 password: 11155484
 name:
   en: Crystal Miracle
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Kristallwunder
+  es: Milagro del Cristal
+  fr: Miracle du Cristal
+  it: Miracolo Cristallo
+  pt: Milagre Cristalino
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>奇<rt>き</rt></ruby><ruby>跡<rt>せき</rt></ruby>
   ja_romaji: Hōgyoku no Kiseki
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     When a Spell/Trap Card, or monster effect, is activated: Destroy 1 "Crystal Beast" card you control, and if you do, negate that activation, and if you do that, destroy that card. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone while this card is in your GY, even during the Damage Step: You can banish this card; place 1 "Crystal Beast" monster from your hand, Deck, or GY, face-up in your Spell & Trap Zone as a Continuous Spell. You can only use this effect of "Crystal Miracle" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wenn eine Zauber-/Fallenkarte oder ein Monstereffekt aktiviert wird: Zerstöre 1 „Kristallungeheuer“-Karte, die du kontrollierst, und falls du dies tust, annulliere jene Aktivierung und falls du dies tust, zerstöre jene Karte. Falls eine oder mehr „Kristallungeheuer“-Karten in deine Zauber- & Fallenzone gelegt werden, solange sich diese Karte in deinem Friedhof befindet, selbst während des Damage Steps: Du kannst diese Karte verbannen; lege 1 „Kristallungeheuer“-Monster von deiner Hand, deinem Deck oder deinem Friedhof offen als Permanenten Zauber in deine Zauber- & Fallenzone. Du kannst diesen Effekt von „Kristallwunder“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Cuando es activada una Carta Mágica/de Trampa, o efecto de monstruo: destruye 1 carta "Bestia de Cristal" que controles y, si lo haces, niega esa activación y, si haces eso, destruye esa carta. Si una o más cartas "Bestia de Cristal" son puestas en tu Zona de Magia y Trampas mientras esta carta esté en tu Cementerio, incluso durante el Damage Step: puedes desterrar esta carta; pon 1 monstruo "Bestia de Cristal" en tu mano, Deck o Cementerio boca arriba en tu Zona de Magia y Trampas como una Mágica Continua. Sólo puedes usar este efecto de "Milagro del Cristal" una vez por turno.
+  fr: |-
+    Lorsqu'une Carte Magie/Piège ou un effet de monstre est activé : détruisez 1 carte "Bête Cristalline" que vous contrôlez, et si vous le faites, annulez l'activation, et si vous faites ça, détruisez la carte. Si une ou plusieurs cartes "Bête Cristalline" sont placées dans votre Zone Magie & Piège tant que cette carte est dans votre Cimetière, même durant la Damage Step : vous pouvez bannir cette carte ; placez 1 monstre "Bête Cristalline" depuis votre main, Deck ou Cimetière, face recto dans votre Zone Magie & Piège comme Magie Continue. Vous ne pouvez utiliser cet effet de "Miracle du Cristal" qu'une fois par tour.
+  it: |-
+    Quando viene attivata una Carta Magia/Trappola, o l'effetto di un mostro: distruggi 1 carta "Bestia Cristallo" che controlli e, se lo fai, annulla quell'attivazione e, se fai quello, distruggi quella carta. Se una o più carte "Bestia Cristallo" vengono messe nella tua Zona Magie & Trappole mentre questa carta è nel tuo Cimitero, anche durante il Damage Step: puoi bandire questa carta; metti 1 mostro "Bestia Cristallo" dalla tua mano, Deck o Cimitero scoperto nella tua Zona Magie & Trappole come una Magia Continua. Puoi utilizzare questo effetto di "Miracolo Cristallo" una sola volta per turno.
+  pt: |-
+    Quando um Card de Magia/Armadilha, ou efeito de monstro, for ativado: destrua 1 card "Fera Cristalina" que você controla e, se isso acontecer, negue a ativação e, se isso acontecer, destrua esse card. Se um ou mais cards "Fera Cristalina" forem colocados na sua Zona de Magias & Armadilhas enquanto este card estiver no seu Cemitério, mesmo durante a Etapa de Dano: você pode banir este card; coloque 1 monstro "Fera Cristalina" da sua mão, do Deck ou do Cemitério, com a face para cima na sua Zona de Magias & Armadilhas como uma Magia Contínua. Você só pode usar este efeito de "Milagre Cristalino" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：モンスターの効果・魔法・罠カードが発動した時に発動できる。自分フィールドの「宝玉獣」カード１枚を選んで破壊し、その発動を無効にし破壊する。②：このカードが墓地に存在する状態で、自分の魔法＆罠ゾーンに「宝玉獣」カードが置かれた場合、このカードを除外して発動できる（ダメージステップでも発動可能）。自分の手札・デッキ・墓地から「宝玉獣」モンスター１体を選び、永続魔法カード扱いで自分の魔法＆罠ゾーンに表側表示で置く。
   ko:
