--- a/data/cards/47149093.yaml
+++ b/data/cards/47149093.yaml
@@ -2,11 +2,11 @@ konami_id: 17733
 password: 47149093
 name:
   en: Crystal Brilliance
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Kristallbrillanz
+  es: Brillo del Cristal
+  fr: Brillance du Cristal
+  it: Brillantezza Cristallo
+  pt: Brilho Cristalino
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>玲<rt>れい</rt></ruby><ruby>瓏<rt>ろう</rt></ruby>
   ja_romaji: Hōgyoku no Reirō
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     You can only control 1 "Crystal Brilliance". Each "Crystal Beast" monster you control gains ATK equal to its original DEF. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone, even during the Damage Step: You can send this face-up card to the GY; Special Summon 1 "Crystal Beast" monster from your hand or GY, also any damage you take this turn is halved.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Du kannst nur 1 „Kristallbrillanz“ kontrollieren. Jedes „Kristallungeheuer“-Monster, das du kontrollierst, erhält ATK in Höhe seiner Grund-DEF. Falls eine oder mehr „Kristallungeheuer“-Karten in deine Zauber- & Fallenzone gelegt werden, selbst während des Damage Steps: Du kannst diese offene Karte auf den Friedhof legen; beschwöre 1 „Kristallungeheuer“-Monster als Spezialbeschwörung von deiner Hand oder deinem Friedhof, zusätzlich wird der Schaden halbiert, den du in diesem Spielzug erhältst.
+  es: |-
+    Sólo puedes controlar 1 "Brillo del Cristal". Cada monstruo "Bestia de Cristal" que controles gana ATK igual a su DEF original. Si una o más cartas "Bestia de Cristal" son puestas en tu Zona de Magia y Trampas, incluso durante el Damage Step: puedes mandar al Cementerio esta carta boca arriba; Invoca de Modo Especial, desde tu mano o Cementerio, 1 monstruo "Bestia de Cristal", y además cualquier daño que recibas este turno se divide a la mitad.
+  fr: |-
+    Vous ne pouvez contrôler qu'1 "Brillance du Cristal". Chaque monstre "Bête Cristalline" que vous contrôlez gagne une ATK égale à sa DEF d'origine. Si une ou plusieurs cartes "Bête Cristalline" sont placées dans votre Zone Magie & Piège, même durant la Damage Step : vous pouvez envoyer cette carte face recto au Cimetière ; Invoquez Spécialement 1 monstre "Bête Cristalline" depuis votre main ou Cimetière, et aussi, les dommages que vous recevez ce tour sont divisés par deux.
+  it: |-
+    Puoi controllare solo 1 "Brillantezza Cristallo". Ogni mostro "Bestia Cristallo" che controlli guadagna ATK pari al suo DEF originale. Se una o più carte "Bestia Cristallo" vengono messe nella tua Zona Magie & Trappole, anche durante il Damage Step: puoi mandare questa carta scoperta al Cimitero; Evoca Specialmente 1 mostro "Bestia Cristallo" dalla tua mano o Cimitero, inoltre qualsiasi danno che subisci in questo turno viene dimezzato.
+  pt: |-
+    Você só pode controlar 1 "Brilho Cristalino". Cada monstro "Fera Cristalina" que você controla ganha ATK igual à sua DEF original. Se um ou mais cards "Fera Cristalina" forem colocados na sua Zona de Magias & Armadilhas, mesmo durante a Etapa de Dano: você pode enviar este card com a face para cima para o Cemitério; Invoque por Invocação-Especial 1 monstro "Fera Cristalina" da sua mão ou do Cemitério e, além disso, qualquer dano que você sofrer neste turno é diminuído pela metade.
   ja: |-
     ①：「宝玉の玲瓏」は自分フィールドに１枚しか表側表示で存在できない。②：自分フィールドの「宝玉獣」モンスターの攻撃力は、その元々の守備力分アップする。③：自分の魔法＆罠ゾーンに「宝玉獣」カードが置かれた場合、魔法＆罠ゾーンの表側表示のこのカードを墓地へ送って発動できる（ダメージステップでも発動可能）。自分の手札・墓地から「宝玉獣」モンスター１体を選んで特殊召喚する。このターン、自分が受ける全てのダメージは半分になる。
   ko:
