--- a/data/cards/58371671.yaml
+++ b/data/cards/58371671.yaml
@@ -2,11 +2,11 @@ konami_id: 17730
 password: 58371671
 name:
   en: Crystal Aegis
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Kristallobhut
+  es: Égida del Cristal
+  fr: Égide du Cristal
+  it: Egida Cristallo
+  pt: Égide Cristalino
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>加<rt>か</rt></ruby><ruby>護<rt>ご</rt></ruby>
   ja_romaji: Hōgyoku no Kago
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Target 1 "Crystal Beast" Monster Card you control; destroy it, then Special Summon 1 "Crystal Beast Token" with the destroyed monster's original Type, Attribute, Level, and ATK/DEF. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone while this card is in your GY, even during the Damage Step: You can banish this card; Special Summon 1 "Crystal Beast" Monster Card from your Spell & Trap Zone. You can only use this effect of "Crystal Aegis" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Wähle 1 „Kristallungeheuer“-Monsterkarte, die du kontrollierst; zerstöre sie, dann beschwöre 1 „Kristallungeheuer-Spielmarke“ mit Grund-Typ, -Eigenschaft, -Stufe und -ATK/DEF des zerstörten Monsters als Spezialbeschwörung. Falls eine oder mehr „Kristallungeheuer“-Karten in deine Zauber- & Fallenzone gelegt werden, solange sich diese Karte in deinem Friedhof befindet, selbst während des Damage Steps: Du kannst diese Karte verbannen; beschwöre 1 „Kristallungeheuer“-Monsterkarte als Spezialbeschwörung von deiner Zauber- & Fallenzone. Du kannst diesen Effekt von „Kristallobhut“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Selecciona 1 Carta de Monstruo "Bestia de Cristal" que controles; destrúyela, y después Invoca de Modo Especial 1 "Ficha Bestia de Cristal" con el mismo Tipo, Atributo, Nivel y ATK/DEF originales que el monstruo destruido. Si una o más cartas "Bestia de Cristal" son puestas en tu Zona de Magia y Trampas, mientras esta carta esté en tu Cementerio, incluso durante el Damage Step: puedes desterrar esta carta; Invoca de Modo Especial, desde tu Zona de Magia y Trampas, 1 Carta de Monstruo "Bestia de Cristal". Sólo puedes usar este efecto de "Égida del Cristal" una vez por turno.
+  fr: |-
+    Ciblez 1 Carte Monstre "Bête Cristalline" que vous contrôlez ; détruisez-la, puis Invoquez Spécialement 1 "Jeton Bête Cristalline" du Type, Attribut, Niveau et ATK/DEF d'origine du monstre détruit. Si une ou plusieurs cartes "Bête Cristalline" sont placées dans votre Zone Magie & Piège tant que cette carte est dans votre Cimetière, même durant la Damage Step : vous pouvez bannir cette carte ; Invoquez Spécialement 1 Carte Monstre "Bête Cristalline" depuis votre Zone Magie & Piège. Vous ne pouvez utiliser cet effet de "Égide du Cristal" qu'une fois par tour.
+  it: |-
+    Scegli come bersaglio 1 Carta Mostro "Bestia Cristallo" che controlli; distruggila, poi Evoca Specialmente 1 "Segna-Bestia Cristallo" con il Tipo, Attributo, Livello e ATK/DEF originali del mostro distrutto. Se una o più carte "Bestia Cristallo" vengono messe nella tua Zona Magie & Trappole, mentre questa carta è nel tuo Cimitero, anche durante il Damage Step: puoi bandire questa carta; Evoca Specialmente 1 Carta Mostro "Bestia Cristallo" dalla tua Zona Magie & Trappole. Puoi utilizzare questo effetto di "Egida Cristallo" una sola volta per turno.
+  pt: |-
+    Escolha 1 Card de Monstro "Fera Cristalina" que você controla; destrua-o e, depois, Invoque por Invocação-Especial 1 "Ficha de Fera Cristalina" com o Tipo, Atributo, Nível e ATK/DEF originais do monstro destruído. Se um ou mais cards "Fera Cristalina" forem colocados na sua Zona de Magias & Armadilhas enquanto este card estiver no seu Cemitério, mesmo durante a Etapa de Dano: você pode banir este card; Invoque por Invocação-Especial 1 Card de Monstro "Fera Cristalina" da sua Zona de Magias & Armadilhas. Você só pode usar este efeito de "Égide Cristalino" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分フィールドの「宝玉獣」モンスターカード１枚を対象として発動できる。そのカードを破壊する。その後、そのカードの元々の種族・属性・レベル・攻撃力・守備力を持つ「宝玉獣トークン」１体を自分フィールドに特殊召喚する。②：このカードが墓地に存在し、自分の魔法＆罠ゾーンに「宝玉獣」カードが置かれた場合、このカードを除外して発動できる（ダメージステップでも発動可能）。自分の魔法＆罠ゾーンの「宝玉獣」モンスターカード１枚を選んで特殊召喚する。
   ko:
