--- a/data/cards/85766789.yaml
+++ b/data/cards/85766789.yaml
@@ -2,11 +2,11 @@ konami_id: 17731
 password: 85766789
 name:
   en: Crystal Boon
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Kristallgabe
+  es: Beneficio del Cristal
+  fr: Aubaine du Cristal
+  it: Beneficio Cristallo
+  pt: Dádiva Cristalina
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby>の<ruby>祝<rt>しゅく</rt></ruby><ruby>福<rt>ふく</rt></ruby>
   ja_romaji: Hōgyoku no Shukufuku
   ko:
@@ -16,11 +16,16 @@ name:
 text:
   en: |-
     Special Summon up to 2 "Crystal Beast" Monster Cards from your Spell & Trap Zone, and if you do, gain LP equal to their combined original ATK. If a "Crystal Beast" card(s) is placed in your Spell & Trap Zone while this card is in your GY, even during the Damage Step: You can banish this card; excavate the top card of your Deck, and if it is a "Crystal Beast" monster, either add it to your hand or Special Summon it. Otherwise, send that card to the GY. You can only use this effect of "Crystal Boon" once per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Beschwöre bis zu 2 „Kristallungeheuer“-Monsterkarten als Spezialbeschwörung von deiner Zauber- & Fallenzone und falls du dies tust, erhältst du LP in Höhe ihrer kombinierten Grund-ATK. Falls eine oder mehr „Kristallungeheuer“-Karten in deine Zauber- & Fallenzone gelegt werden, solange sich diese Karte in deinem Friedhof befindet, selbst während des Damage Steps: Du kannst diese Karte verbannen; grabe die oberste Karte deines Decks aus und falls es ein „Kristallungeheuer“-Monster ist, füge es entweder deiner Hand hinzu oder beschwöre es als Spezialbeschwörung. Andernfalls lege jene Karte auf den Friedhof. Du kannst diesen Effekt von „Kristallgabe“ nur einmal pro Spielzug verwenden.
+  es: |-
+    Invoca de Modo Especial, desde tu Zona de Magia y Trampas, hasta 2 Cartas de Monstruo "Bestia de Cristal" y, si lo haces, gana LP iguales a su ATK original combinado. Si una o más cartas "Bestia de Cristal" son puestas en tu Zona de Magia y Trampas, mientras esta carta esté en tu Cementerio, incluso durante el Damage Step: puedes desterrar esta carta; excava la carta de la parte superior de tu Deck y, si ésta es un monstruo "Bestia de Cristal", añádelo a tu mano o Invócalo de Modo Especial. De otro modo, manda esa carta al Cementerio. Sólo puedes usar este efecto de "Beneficio del Cristal" una vez por turno.
+  fr: |-
+    Invoquez Spécialement max. 2 Cartes Monstre "Bête Cristalline" depuis votre Zone Magie & Piège, et si vous le faites, gagnez des LP égaux à la somme de leur ATK d'origine. Si une ou plusieurs cartes "Bête Cristalline" sont placées dans votre Zone Magie & Piège tant que cette carte est dans votre Cimetière, même durant la Damage Step : vous pouvez bannir cette carte ; dévoilez la carte du dessus de votre Deck, et si c'est un monstre "Bête Cristalline", soit ajoutez-le à votre main soit Invoquez-le Spécialement. Sinon, envoyez la carte au Cimetière. Vous ne pouvez utiliser cet effet de "Aubaine du Cristal" qu'une fois par tour.
+  it: |-
+    Evoca Specialmente fino a 2 Carte Mostro "Bestia Cristallo" dalla tua Zona Magie & Trappole e, se lo fai, guadagni LP pari alla somma dei loro ATK originali. Se una o più carte "Bestia Cristallo" vengono messe nella tua Zona Magie & Trappole mentre questa carta è nel tuo Cimitero, anche durante il Damage Step: puoi bandire questa carta; dissotterra la prima carta del tuo Deck e, se era un mostro "Bestia Cristallo", aggiungilo alla tua mano oppure Evocalo Specialmente. Altrimenti, manda quella carta al Cimitero. Puoi utilizzare questo effetto di "Beneficio Cristallo" una sola volta per turno.
+  pt: |-
+    Invoque por Invocação-Especial até 2 Cards de Monstro "Fera Cristalina" da sua Zona de Magias & Armadilhas e, se isso acontecer, ganhe PV igual ao ATK original combinado deles. Se um ou mais cards "Fera Cristalina" forem colocados na sua Zona de Magias & Armadilhas enquanto este card estiver no seu Cemitério, mesmo durante a Etapa de Dano: você pode banir este card; escave o card do topo do seu Deck e, se for um monstro "Fera Cristalina", adicione-o à sua mão ou Invoque-o por Invocação-Especial. Caso contrário, envie esse card para o Cemitério. Você só pode usar este efeito de "Dádiva Cristalina" uma vez por turno.
   ja: |-
     このカード名の②の効果は１ターンに１度しか使用できない。①：自分の魔法＆罠ゾーンの「宝玉獣」モンスターカードを２枚まで選んで特殊召喚し、その元々の攻撃力の合計分だけ自分のＬＰを回復する。②：このカードが墓地に存在する状態で、自分の魔法＆罠ゾーンに「宝玉獣」カードが置かれた場合、このカードを除外して発動できる（ダメージステップでも発動可能）。自分のデッキの一番上のカードをめくり、それが「宝玉獣」モンスターだった場合、そのモンスターを手札に加えるか特殊召喚する。違った場合、そのカードを墓地へ送る。
   ko:
