--- a/data/cards/12877076.yaml
+++ b/data/cards/12877076.yaml
@@ -2,11 +2,11 @@ konami_id: 17729
 password: 12877076
 name:
   en: Awakening of the Crystal Ultimates
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: Erwachen der Kristallultimaten
+  es: Despertar de los Definitivos del Cristal
+  fr: Éveil Ultime du Cristal
+  it: Risveglio dei Finali Cristallo
+  pt: Despertar dos Definitivos Cristalinos
   ja: <ruby>宝<rt>ほう</rt></ruby><ruby>玉<rt>ぎょく</rt></ruby><ruby>神<rt>しん</rt></ruby><ruby>覚<rt>かく</rt></ruby><ruby>醒<rt>せい</rt></ruby>
   ja_romaji: Hōgyokushin Kakusei
   ko:
@@ -19,11 +19,31 @@ text:
     ● Take 1 "Rainbow Bridge" card or 1 "Rainbow Refraction" from your Deck, and either add it to your hand or send it to the GY.
     ● Special Summon 1 "Crystal Beast" Monster Card from your hand, Deck, GY, or Spell & Trap Zone.
     You can only activate 1 "Awakening of the Crystal Ultimates" per turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
+  de: |-
+    Zeige 1 „Ultimativer Kristall“-Monster in deiner Hand vor, dann aktiviere 1 dieser Effekte. Falls du ein „Ultimativer Kristall“-Monster kontrollierst, kannst du stattdessen 1 oder 2 dieser Effekte nacheinander aktivieren (und musst kein Monster vorzeigen).
+    ● Nimm 1 „Regenbogenbrücke“-Karte oder 1 „Regenbogen Lichtbrechung“ von deinem Deck und füge sie oder ihn entweder deiner Hand hinzu oder lege sie oder ihn auf den Friedhof.
+    ● Beschwöre 1 „Kristallungeheuer“-Monsterkarte als Spezialbeschwörung von deiner Hand, deinem Deck, deinem Friedhof oder deiner Zauber- & Fallenzone.
+    Du kannst nur 1 „Erwachen der Kristallultimaten“ pro Spielzug aktivieren.
+  es: |-
+    Muestra 1 monstruo "Cristal Definitivo/a" en tu mano, y después activa 1 de estos efectos. Si controlas un monstruo "Cristal Definitivo/a", puedes activar 1 o 2 de estos efectos en secuencia en su lugar (y no hace falta que muestres un monstruo).
+    ● Toma 1 carta "Puente de Arco Iris" o 1 "Refracción Arco Iris" en tu Deck y añádela a tu mano o mándala al Cementerio.
+    ● Invoca de Modo Especial, desde tu mano, Deck, Cementerio o Zona de Magia y Trampas, 1 Carta de Monstruo "Bestia de Cristal".
+    Sólo puedes activar 1 "Despertar de los Definitivos del Cristal" por turno.
+  fr: |-
+    Révélez 1 monstre "Cristal Ultime" dans votre main, puis activez 1 de ces effets. Si vous contrôlez un monstre "Cristal Ultime", vous pouvez activer 1 ou 2 de ces effets dans l'ordre, à la place (et n'avez pas besoin de révéler un monstre).
+    ● Prenez 1 carte "Pont Arc-en-Ciel" ou 1 "Réfraction de l'Arc-en-Ciel" depuis votre Deck, et soit ajoutez-le à votre main soit envoyez-le au Cimetière.
+    ● Invoquez Spécialement 1 Carte Monstre "Bête Cristalline" depuis votre main, Deck, Cimetière ou Zone Magie & Piège.
+    Vous ne pouvez activer qu'1 "Éveil Ultime du Cristal" par tour.
+  it: |-
+    Rivela 1 mostro "Cristallo Finale" nella tua mano, poi attiva 1 di questi effetti. Se controlli un mostro "Cristallo Finale", puoi invece attivare 1 o 2 di questi effetti in ordine (e non devi rivelare un mostro).
+    ● Prendi 1 carta "Ponte Arcobaleno" o 1 "Rifrazione Arcobaleno" dal tuo Deck e aggiungila alla tua mano oppure mandala al Cimitero.
+    ● Evoca Specialmente 1 Carta Mostro "Bestia Cristallo" dalla tua mano, Deck, Cimitero, o Zona Magie & Trappole.
+    Puoi attivare solo 1 "Risveglio dei Finali Cristallo" per turno.
+  pt: |-
+    Revele 1 monstro "Cristalino(a) Definitivo(a)" na sua mão e, depois, ative 1 desses efeitos. Se você controlar um monstro "Cristalino(a) Definitivo(a)", em vez disso, você pode ativar 1 ou 2 desses efeitos em sequência (e não precisa revelar um monstro).
+    ● Pegue 1 card "Ponte Arco-Íris" ou 1 "Refração Arco-Íris" do seu Deck e adicione-o à sua mão ou envie-o para o Cemitério.
+    ● Invoque por Invocação-Especial 1 Card de Monstro "Fera Cristalina" da sua mão, do Deck, do Cemitério ou da sua Zona de Magias & Armadilhas.
+    Você só pode ativar 1 "Despertar dos Definitivos Cristalinos" por turno.
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：手札の「究極宝玉神」モンスター１体を相手に見せ、以下の効果から１つを選択して発動できる。または自分フィールドに「究極宝玉神」モンスターが存在する場合、以下の効果から１つ、または両方を選択して発動できる。
     ●デッキから「架け橋」カードまたは「オーバー・ザ・レインボー」１枚を選び、手札に加えるか墓地へ送る。
